--- a/personal-website/package.json
+++ b/personal-website/package.json
@@ -12,6 +12,7 @@
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-fade-in": "^2.0.1",
+    "react-gtm-module": "^2.0.11",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^5.0.1",
     "react-type-animation": "^2.1.1",
